--- a/docs-development/index-copy.html
+++ b/docs-development/index-copy.html
@@ -309,7 +309,7 @@
         <div class="horizontal-fcontainer">
           <div class="vertical-fcontainer-3">
             <div class="centered">
-              <h2> Copy-Number-Variation </h2>
+              <h2> Copy-Number-Variations </h2>
             </div>
             <div class="centered">
               <p> Identify large-scale chromosomal gains and losses in data derived
